--- a/Projekt5/css/produktside.css
+++ b/Projekt5/css/produktside.css
@@ -10,8 +10,7 @@
 }
 
 body {
-  background-image: background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/background.jpg');
-
+  background-image: linear-gradient(rgba(255, 250, 245, 0.9), rgba(252, 252, 252, 0.5)), url('../img/background.jpg');
 }
 
 .wrapper > * {
@@ -29,21 +28,32 @@ h1 {
   font-weight: semi-bold;
   font-size: 1.5rem;
   color: #000000;
+  padding: 2%;
 }
 
 h2 {
   font-family: 'Poppins', sans-serif;
+  font-size: 1.4rem;
+  font-weight: semi-bold;
+  color: #315343;
+  padding: 5%;
+  padding: 2%;
+}
+
+h3 {
+  font-family: 'Poppins', sans-serif;
   font-size: 1rem;
   font-weight: semi-bold;
-  color: #000000;
-  text-align: center;
+  color: #315343;
   padding: 5%;
+  padding: 2%;
 }
 
 p {
   font-family: 'Poppins', sans-serif;
   font-size: 1rem;
   color: #000000;
+  padding: 2%;
 }
 
 a {
@@ -137,6 +147,19 @@ a:hover {
 
   .hide-on-mobile {
     display: none;
+  }
+
+  .img {
+    width: 90vw;
+    margin-left: 5vw;
+  }
+
+  .antal {
+    background-color: white;
+    width: 80vw;
+    margin-left: 10vw;
+    border-radius: 35px;
+
   }
 
   footer {
