--- a/Projekt5/css/produktside.css
+++ b/Projekt5/css/produktside.css
@@ -155,11 +155,24 @@ a:hover {
   }
 
   .antal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
     background-color: white;
     width: 80vw;
-    margin-left: 10vw;
+    margin: 10vw;
+    padding: 3%;
     border-radius: 35px;
+  }
 
+  .tilføj {
+    border-style: solid;
+    border-color: black;
+    width: 80vw;
+    margin: 10vw;
+    border-radius: 35px;
+    text-align: center;
   }
 
   footer {
