--- a/Projekt5/css/produktside.css
+++ b/Projekt5/css/produktside.css
@@ -145,9 +145,10 @@ a:hover {
     margin: 15px;
   }
 
-  .hide-on-mobile {
-    display: none;
-  }
+  @media only screen and (max-width: 500px){
+    .hide-on-mobile {
+      display: none;
+    }
 
   .img {
     width: 90vw;
@@ -187,3 +188,25 @@ a:hover {
     font-size: 70%;
     text-align: center;
   }
+
+  /*ipad*/
+@media only screen and (min-width: 500px){
+  .container {
+    background-color: #FFFAF5;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2%;
+    padding: 1%;
+    width: 100vw;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+
+  .img {
+    width: 100vw;
+  }
+}
