--- a/Projekt5/CSS/projekt5.css
+++ b/Projekt5/CSS/projekt5.css
@@ -105,4 +105,19 @@ footer{
 
 /* #region Desktop design */
 
+@media only screen and (min-width: 1000px) {
+
+    header .header-brand{
+        font-weight: 400;
+        font-size: 30px;
+        color: #111;
+        text-align: left;
+        padding-left: 50px;
+    } 
+
+    nav{
+        display: block;
+    }
+
+}
 /* #endregion */
