--- a/Projekt5/CSS/projekt5.css
+++ b/Projekt5/CSS/projekt5.css
@@ -43,7 +43,7 @@ nav{
     background-size: cover;
 }
 
-.per-banner h2{
+.per-banner h1{
     font-family: 'Open Sans';
     font-size: 36px;
     font-weight: 800;
@@ -54,7 +54,7 @@ nav{
     text-shadow: 2px 2px 8px #111;
 } 
 
-.per-banner h1{
+.per-banner h2{
     font-family: 'Open Sans';
     font-size: 16px;
     font-weight: 400;
@@ -63,7 +63,7 @@ nav{
     text-shadow: 2px 2px 8px #111;
 } 
 
-.kontakt-btn{
+.banner-btn{
     display: none;
 }
 
@@ -146,31 +146,115 @@ footer{
         height: 800px;
     }
     
-    .per-banner h2{
+    .per-banner h1{
         font-size: 45px;
         font-weight: 500;
-        padding-top: 90px;
+        padding-top: 250px;
         text-align: left;
         padding-left: 100px;
     } 
     
-    .per-banner h1{
+    .per-banner h2{
         font-size: 18px;
         text-align: left;
         padding-left: 100px;
     } 
 
-    .kontakt-btn{
+    .banner-btn{
         display: block;
         width: 120px;
         height: 40px;
         border-radius: 5px;
         margin-left: 100px;
         margin-top: 40px;
-        border:2px solid #232A2D;
-        background-color: #232A2D;
+        border:2px solid #315343;
+        background-color: #315343;
         color: #EEF9FD;
     }
+
+    .banner-btn:hover{
+        background-color: #fff;
+        color: #315343;
+        border:3px solid #315343;
+    }
+
+    .banner-btn:active{
+        transform: scale(1.1);
+    }
+
+    .mobil-menu{
+        display: none;
+    }
+
+    .produkt-menu{
+        width: 100%;
+        height: 500px;
+        display: flex;
+        padding: 100px 0 0 400px;
+        background-color: #fff;
+    }
+
+    .produkt1{
+        padding-right: 200px;
+    }
+
+    .produkt2{
+        padding-right: 200px;
+    }
+
+    .produkt-menu h2{
+        font-family: 'Open Sans';
+        font-size: 28px;
+        font-weight: 400;
+        color: #111;
+        padding-bottom: 20px;
+    }
+
+    .produkt-menu h3{
+        font-family: 'Open Sans';
+        font-size: 16px;
+        font-weight: 400;
+        color: #111;
+        line-height: 23px;
+        padding-bottom: 20px;
+    }
+
+    .produkt-btn{
+        display: block;
+        width: 200px;
+        height: 40px;
+        border-radius: 5px;
+        font-size: 16px;
+        font-family: 'Open Sans';
+        border:3px solid #315343;
+        background-color: #EEF9FD;
+        color: #315343;
+    }
+
+
+
+    .til-webshop-btn{
+        display: block;
+        width: 300px;
+        height: 45px;
+        border-radius: 5px;
+        font-size: 16px;
+        font-family: 'Open Sans';
+        border:3px solid #315343;
+        background-color: #315343;
+        color: #EEF9FD;
+        
+    }
+
+    .webshop-btn{
+        width: 100%;
+        height: 100px;
+        background-color: #fff;
+        padding-left: 40%;
+    }
+  
+
+
 
 
 }
