--- a/Projekt5/css/produktside.css
+++ b/Projekt5/css/produktside.css
@@ -1,21 +1,25 @@
-*{
+* {
   box-sizing: border-box;
   padding: 0px;
   margin: 0px;
 }
 
 body {
-  background-image: linear-gradient(rgba(255, 250, 245, 1), rgba(252, 252, 252, 0.7)), url('../img/background.jpg');
+  background-image: linear-gradient(
+      rgba(255, 250, 245, 1),
+      rgba(252, 252, 252, 0.7)
+    ),
+    url("../img/background.jpg");
 }
 
 ul {
   list-style: none;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 /*tekst mobil*/
 h1 {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: semi-bold;
   font-size: 1.3rem;
   color: #000000;
@@ -23,34 +27,29 @@ h1 {
 }
 
 h2 {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 1.4rem;
   font-weight: semi-bold;
   color: #315343;
-  padding: 5%;
-  padding: 2%;
 }
 
 h3 {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 1rem;
   font-weight: semi-bold;
   color: #315343;
-  padding: 5%;
-  padding: 2%;
 }
 
 p {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 1rem;
   color: #000000;
-  padding: 2%;
 }
 
 a {
   color: #000000;
   text-decoration: none;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 1rem;
   font-weight: medium;
 }
@@ -63,12 +62,11 @@ a:hover {
   width: 90vw;
   margin-left: 5vw;
 }
-
-.træbord {
-  float:left;
-  margin-right:48vw;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  padding: 50px;
 }
-
 .antal {
   display: flex;
   flex-direction: row;
@@ -91,8 +89,8 @@ a:hover {
 }
 
 footer {
-  font-family: 'Poppins', sans-serif;
-  background-color:  #A16D4E;
+  font-family: "Poppins", sans-serif;
+  background-color: #a16d4e;
   width: 100%;
   margin: 10% 0% 0% 0%;
   padding: 2%;
@@ -106,7 +104,7 @@ footer {
 /*navigation*/
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #FFFAF5 0.2;
+  background-color: #fffaf5 0.2;
   position: absolute;
   width: 100%;
   height: 5vh;
@@ -122,19 +120,109 @@ footer {
   padding: 7px 22px;
   text-decoration: none;
   font-size: 25px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   display: none;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
   font-weight: bold;
-  color: #A16D4E;
+  color: #a16d4e;
+}
+
+/*billede carousel*/
+.carousel {
+  /* BUG mere end 100vw */
+  position: relative;
+  height: 600px;
+  width: 100%;
+  margin-bottom: 75px;
+}
+
+.carousel_image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel_track-container {
+  /*margin: 30px;*/
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.carousel_track {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  position: relative;
+  height: 100%;
+  transition: transform 250ms ease-in;
+}
+
+.carousel_slide {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+.carousel_button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+  background-color: #b5b5b5;
+  border: 0;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.carousel_button--left {
+  left: -20px;
+  z-index: 1;
+  background-image: url("../IMG/arrow-left.svg");
+}
+
+.carousel_button--right {
+  right: -20px;
+  background-image: url("../IMG/arrow-right.svg");
+}
+
+.carousel_nav {
+  display: flex;
+  justify-content: center;
+  padding: 10px 0;
+}
+
+.carousel_indicator {
+  border: 0;
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  background: rgba(0, 0, 0, 0.3);
+  margin: 0 12px;
+  cursor: pointer;
+}
+
+.carousel_indicator.current-slide {
+  background: rgba(0, 0, 0.75);
+}
+
+.is-hidden {
+  display: none;
 }
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
- @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
@@ -146,17 +234,16 @@ footer {
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 600px) {
   .topnav.responsive {
-  position: absolute;
-  height: 100%;
-  background-color: #FFFAF5;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  opacity: 97%;
-  width: 100%;
-  height: 55vh;
-  text-align: center;
-
+    position: absolute;
+    height: 100%;
+    background-color: #fffaf5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 97%;
+    width: 100%;
+    height: 55vh;
+    text-align: center;
   }
 
   .topnav.responsive a.icon {
@@ -175,22 +262,22 @@ footer {
     float: right;
     display: block;
     font-size: 150%;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     color: #000000;
     margin: 15px;
   }
 }
 
-@media only screen and (max-width: 900px){
+@media only screen and (max-width: 900px) {
   .hide-on-mobile {
     display: none;
   }
 }
 
-  /*ipad*/
-@media only screen and (min-width: 501px){
+/*ipad*/
+@media only screen and (min-width: 501px) {
   .container {
-    background-color: #FFFAF5;
+    background-color: #fffaf5;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -201,16 +288,12 @@ footer {
     overflow: hidden;
     position: fixed;
     top: 0;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
   }
 
   .img {
     margin-top: 15vh;
-  }
-
-  .træbord {
-    margin-left: 10vw;
-    margin-right: 52vw;
   }
 
   .nav-com {
@@ -219,7 +302,7 @@ footer {
     justify-content: space-between;
     flex-direction: row;
     text-align: center;
-    background-color: #FFFAF5;
+    background-color: #fffaf5;
     text-decoration: none;
     width: 50vw;
     margin-right: 5vw;
@@ -230,14 +313,73 @@ footer {
   }
 }
 
-@media only screen and (min-width: 900px){
+.produkt-top {
+  display: flex;
+  flex-direction: column;
+}
+
+.produkt-info {
+  display: flex;
+  flex-direction: column;
+  /* padding: 50px; */
+  flex: 0 1 50%;
+}
+
+.produkt-info > * {
+  margin-bottom: 20px;
+}
+
+.info {
+  padding: 50px 0;
+}
+
+.info p {
+  margin-bottom: 20px;
+}
+.selectdropdown {
+  padding: 15px 100px 15px 10px;
+  border-radius: 20px;
+  outline: none;
+  border: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-image: url("../IMG/arrow.svg");
+  background-position: right 5% center;
+  background-repeat: no-repeat;
+  background-size: 25% 25%;
+  cursor: pointer;
+  min-width: 50%;
+  max-width: 260px;
+}
+.addtocart {
+  max-width: 260px;
+  min-width: 50%;
+  background-color: transparent;
+  border-radius: 20px;
+  box-shadow: none;
+  border: 2px solid black;
+  padding: 10px 15px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 900px) {
+  .produkt-top {
+    flex-direction: row;
+  }
+  .carousel {
+    padding-bottom: 0;
+  }
+  .produkt-info {
+    margin-left: 50px;
+  }
   .hide-on-mobile {
     display: show;
   }
 
   .wrapper {
-    display: flex;
-    flex-direction: row;
+    padding: 130px 50px 50px 50px;
   }
 
   .container2 {
@@ -252,21 +394,7 @@ footer {
     height: 40vh;
   }
 
-  .træbord {
-    margin: 0% 5% 1% 5%;
-    padding: 0px;
-  }
-
-  .pris {
-    padding: 0px;
-    margin: 2% 5% 5% 5%;
-    clear: both;
-  }
-
-  .antal {
-    margin: 10% 5% 5% 5%;
-    width: 20vw;
-  }
+  /* TODO husk klassen */
 
   .tilføj {
     margin: 5%;
@@ -287,12 +415,13 @@ footer {
     margin-left: 0px;
   }
 
-  .info {
-    margin-left: 3.5vw;
-    margin-top: 7vh;
-  }
-
   .nav-com {
     width: 40vw;
+  }
+}
+@media only screen and (min-width: 1400px) {
+  .wrapper {
+    max-width: 1400px;
+    margin: 0 auto;
   }
 }
