--- a/Projekt5/CSS/projekt5.css
+++ b/Projekt5/CSS/projekt5.css
@@ -5,13 +5,14 @@
     text-decoration: none; 
     margin: 0;
     font-family: 'Poppins';
+    box-sizing: border-box
 }
 
 /* #region Mobil design */
 
 body{
     background-image: url(../IMG/bg-flip.png);
-    overflow-x: hidden;
+    
 }
 
 .br-mobile{
@@ -280,6 +281,97 @@ footer{
         padding: 5% 0 0 22%;
         
     }
+
+    /* Slideshow af produkter */
+
+    .slideshow-container {
+        max-width: 1000px;
+        height: 600px;
+        position: relative;
+        margin: auto;
+      }
+
+      .mySlides {
+        display: none;
+        
+      } 
+
+      img{
+          vertical-align: middle;
+      } 
+
+      .inline {
+   
+        float: left;
+        width: 33.333333%;
+    }
+
+
+      .prev, .next {
+        cursor: pointer;
+        position: relative;
+        top: 50%;
+        width: auto;
+        margin-top: -22px;
+        padding: 16px;
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+      } 
+
+      .next {
+        right: -100px;
+        border-radius: 3px 0 0 3px;
+      }
+
+      .prev{
+          left: -100px;
+          border-radius: 3px 0 0 3px;
+      }
+
+      .prev:hover, .next:hover {
+        background-color: rgba(0,0,0,0.8);
+      } 
+
+
+
+      .dot {
+        cursor: pointer;
+        height: 15px;
+        width: 15px;
+        margin: 0 2px;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+      }
+      
+      .active, .dot:hover {
+        background-color: #717171;
+      }
+
+      .fade {
+        -webkit-animation-name: fade;
+        -webkit-animation-duration: 1.5s;
+        animation-name: fade;
+        animation-duration: 1.5s;
+      }
+
+      @-webkit-keyframes fade {
+        from {opacity: .4}
+        to {opacity: 1}
+      }
+      
+      @keyframes fade {
+        from {opacity: .4}
+        to {opacity: 1}
+      }
+
+
+
 
     .produkt1{
         padding-right: 10%;
