--- a/Projekt5/CSS/kontakt.css
+++ b/Projekt5/CSS/kontakt.css
@@ -88,7 +88,7 @@ button {
     border: 2px solid #315343;
     border-radius: 15px;
     margin: 10px 0px 15px 0px
-    
+
 }
 
 #form textarea {
@@ -103,20 +103,16 @@ button {
     padding: 0px;
     margin: 0px;
   }
-  
+
   body {
-    background-image: linear-gradient(
-        rgba(255, 250, 245, 1),
-        rgba(252, 252, 252, 0.7)
-      ),
-      url("../img/background.jpg");
+    background: url("../img/bg-flip.png");
   }
-  
+
   ul {
     list-style: none;
     font-family: "Poppins", sans-serif;
   }
-  
+
   /*tekst mobil*/
   h1 {
     font-family: "Poppins", sans-serif;
@@ -125,27 +121,27 @@ button {
     color: #262525;
     padding: 2%;
   }
-  
+
   h2 {
     font-family: "Poppins", sans-serif;
     font-size: 1.4rem;
     font-weight: semi-bold;
     color: #315343;
   }
-  
+
   h3 {
     font-family: "Poppins", sans-serif;
     font-size: 1rem;
     font-weight: semi-bold;
     color: #315343;
   }
-  
+
   p {
     font-family: "Poppins", sans-serif;
     font-size: 30px;
     color: #262525;
   }
-  
+
   a {
     color: #262525;
     text-decoration: none;
@@ -153,11 +149,11 @@ button {
     font-size: 1rem;
     font-weight: medium;
   }
-  
+
   a:hover {
     opacity: 0.5;
   }
-  
+
   .img {
     width: 90vw;
     margin-left: 5vw;
@@ -178,7 +174,7 @@ button {
     padding: 3%;
     border-radius: 35px;
   }
-  
+
   .tilføj {
     border-style: solid;
     border-color: black;
@@ -187,20 +183,7 @@ button {
     border-radius: 35px;
     text-align: center;
   }
-  
-  footer {
-    font-family: "Poppins", sans-serif;
-    background-color: #a16d4e;
-    width: 100%;
-    margin: 10% 0% 0% 0%;
-    padding: 2%;
-  }
-  
-  #little {
-    font-size: 70%;
-    text-align: center;
-  }
-  
+
   /*navigation*/
   /* Add a black background color to the top navigation */
   .topnav {
@@ -210,7 +193,7 @@ button {
     height: 5vh;
     top: 0%;
   }
-  
+
   /* Style the links inside the navigation bar */
   .topnav a {
     float: right;
@@ -223,13 +206,13 @@ button {
     font-family: "Poppins", sans-serif;
     display: none;
   }
-  
+
   /* Change the color of links on hover */
   .topnav a:hover {
     font-weight: bold;
     color: #a16d4e;
   }
-  
+
   /*billede carousel*/
   .carousel {
     /* BUG mere end 100vw */
@@ -238,20 +221,20 @@ button {
     width: 100%;
     margin-bottom: 75px;
   }
-  
+
   .carousel_image {
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
-  
+
   .carousel_track-container {
     /*margin: 30px;*/
     height: 100%;
     position: relative;
     overflow: hidden;
   }
-  
+
   .carousel_track {
     padding: 0;
     margin: 0;
@@ -260,14 +243,14 @@ button {
     height: 100%;
     transition: transform 250ms ease-in;
   }
-  
+
   .carousel_slide {
     position: absolute;
     top: 0;
     bottom: 0;
     width: 100%;
   }
-  
+
   .carousel_button {
     position: absolute;
     top: 50%;
@@ -282,24 +265,24 @@ button {
     height: 40px;
     border-radius: 50%;
   }
-  
+
   .carousel_button--left {
     left: -20px;
     z-index: 1;
     background-image: url("../IMG/arrow-left.svg");
   }
-  
+
   .carousel_button--right {
     right: -20px;
     background-image: url("../IMG/arrow-right.svg");
   }
-  
+
   .carousel_nav {
     display: flex;
     justify-content: center;
     padding: 10px 0;
   }
-  
+
   .carousel_indicator {
     border: 0;
     border-radius: 50%;
@@ -309,15 +292,15 @@ button {
     margin: 0 12px;
     cursor: pointer;
   }
-  
+
   .carousel_indicator.current-slide {
     background: rgba(0, 0, 0.75);
   }
-  
+
   .is-hidden {
     display: none;
   }
-  
+
   /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
   @media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {
@@ -330,7 +313,7 @@ button {
       color: #000000;
     }
   }
-  
+
   /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
   @media screen and (max-width: 600px) {
     .topnav.responsive {
@@ -345,7 +328,7 @@ button {
       height: 55vh;
       text-align: center;
     }
-  
+
     .topnav.responsive a.icon {
       position: absolute;
       float: right;
@@ -353,11 +336,11 @@ button {
       margin-right: -290px;
       top: -15px;
     }
-  
+
     .topnav.responsive a.icon::after {
       color: #000000;
     }
-  
+
     .topnav.responsive a {
       float: right;
       display: block;
@@ -367,13 +350,13 @@ button {
       margin: 15px;
     }
   }
-  
+
   @media only screen and (max-width: 900px) {
     .hide-on-mobile {
       display: none;
     }
   }
-  
+
   /*ipad*/
   @media only screen and (min-width: 501px) {
     .container {
@@ -391,11 +374,11 @@ button {
       box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
       z-index: 1;
     }
-  
+
     .img {
       margin-top: 15vh;
     }
-  
+
     .nav-com {
       font-size: 125%;
       display: flex;
@@ -407,32 +390,32 @@ button {
       width: 50vw;
       margin-right: 5vw;
     }
-  
+
     .brand {
       width: 20vw;
     }
   }
-  
+
   .produkt-top {
     display: flex;
     flex-direction: column;
   }
-  
+
   .produkt-info {
     display: flex;
     flex-direction: column;
     /* padding: 50px; */
     flex: 0 1 50%;
   }
-  
+
   .produkt-info > * {
     margin-bottom: 20px;
   }
-  
+
   .info {
     padding: 50px 0;
   }
-  
+
   .info p {
     margin-bottom: 20px;
   }
@@ -463,7 +446,7 @@ button {
     font-weight: 600;
     cursor: pointer;
   }
-  
+
   @media only screen and (min-width: 900px) {
     .produkt-top {
       flex-direction: row;
@@ -477,11 +460,11 @@ button {
     .hide-on-mobile {
       display: show;
     }
-  
+
     .wrapper {
       padding: 130px 50px 50px 50px;
     }
-  
+
     .container2 {
       padding: 0px;
       margin-top: 25vh;
@@ -493,28 +476,28 @@ button {
       width: 30vw;
       height: 40vh;
     }
-  
+
     /* TODO husk klassen */
-  
+
     .tilføj {
       margin: 5%;
       width: 20vw;
     }
-  
+
     .img {
       width: 30vw;
       padding: 0px;
     }
-  
+
     .bord1 {
       grid-area: bord1;
     }
-  
+
     .bord2 {
       grid-area: brod2;
       margin-left: 0px;
     }
-  
+
     .nav-com {
       width: 40vw;
     }
@@ -531,4 +514,3 @@ button {
       font-size: 51px;
     }
   }
-  
