--- a/Projekt5/CSS/projekt5.css
+++ b/Projekt5/CSS/projekt5.css
@@ -120,7 +120,7 @@ nav{
     width: 100%;
     height: auto;
     padding: 5%;
-    margin-top: 20px;
+    margin-top: 25%;
     margin-bottom: 0px;
     background-color: #A16D4E;
 }
