--- a/Projekt5/css/produktside.css
+++ b/Projekt5/css/produktside.css
@@ -80,6 +80,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   padding: 50px;
+  height: 80vh;
 }
 .antal {
   display: flex;
@@ -331,7 +332,7 @@ a:hover {
 }
 
 .info {
-  padding: 50px 0;
+  padding: 50px 0px 50px 0px;
 }
 
 .info p {
@@ -381,6 +382,7 @@ a:hover {
 
   .wrapper {
     padding: 130px 50px 50px 50px;
+    height: 100vh;
   }
 
   .container2 {
