--- a/Projekt5/CSS/projekt5.css
+++ b/Projekt5/CSS/projekt5.css
@@ -120,7 +120,7 @@ nav{
     width: 100%;
     height: auto;
     padding: 5%;
-    margin-top: 25%;
+    margin-top: 20px;
     margin-bottom: 0px;
     background-color: #A16D4E;
 }
@@ -284,9 +284,9 @@ nav{
 
     .produkt-menu{
         width: 100%;
-        height: 500px;
+        height: 700px;
         display: flex;
-        padding: 5% 0 0 22%;
+        
 
     }
 
@@ -297,6 +297,7 @@ nav{
         height: 600px;
         position: relative;
         margin: auto;
+        padding: 2% 0 0 3%;
       }
 
       .mySlides {
@@ -309,7 +310,7 @@ nav{
       }
 
       .inline {
-
+        
         float: left;
         width: 33.333333%;
     }
@@ -317,26 +318,26 @@ nav{
 
       .prev, .next {
         cursor: pointer;
-        position: relative;
+        position: absolute;
         top: 50%;
         width: auto;
         margin-top: -22px;
         padding: 16px;
-        color: white;
+        color: #111;
         font-weight: bold;
-        font-size: 18px;
+        font-size: 24px;
         transition: 0.6s ease;
         border-radius: 0 3px 3px 0;
         user-select: none;
       }
 
       .next {
-        right: -100px;
+        right: 20px;
         border-radius: 3px 0 0 3px;
       }
 
       .prev{
-          left: -100px;
+          left: -20px;
           border-radius: 3px 0 0 3px;
       }
 
@@ -433,7 +434,7 @@ nav{
         display: block;
         width: 100%;
         height: 100px;
-        padding-left: 42%;
+        padding-left: 41%;
     }
 
     .historie-section{
@@ -448,7 +449,7 @@ nav{
         color: #111;
         text-align: left;
         float: right;
-        padding-right: 5%;
+        padding-right: 14%;
     }
 
     .historie-tekst h2{
@@ -474,7 +475,7 @@ nav{
         width: 100%;
         height: 300px;
         margin-top: 3%;
-
+        
     }
 
     .udfordringer-tekst{
@@ -496,7 +497,7 @@ nav{
     }
 
     .udfordringer-billede{
-        padding: 3% 5% 0 0;
+        padding: 3% 14% 0 0;
         float: right;
     }
 
@@ -507,7 +508,7 @@ nav{
         width: 100%;
         height: 350px;
         margin-top: 3%;
-
+        padding-right: 10%;
     }
 
     .kursus-tekst{
