--- a/Projekt5/css/produktside.css
+++ b/Projekt5/css/produktside.css
@@ -44,14 +44,14 @@ h2 {
   font-family: "Poppins", sans-serif;
   font-size: 1.4rem;
   font-weight: semi-bold;
-  color: #315343;
+  color: #2D2D2D;
 }
 
 h3 {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
   font-weight: semi-bold;
-  color: #315343;
+  color: #2d2d2d;
 }
 
 p {
